ppapi/native_client/tests/ppapi_browser/bad/ppapi_bad_ppp_initialize.nmf
{
  "program": {
    "x86-32": {"url": "ppapi_bad_ppp_initialize_x86-32.nexe"},
    "x86-64": {"url": "ppapi_bad_ppp_initialize_x86-64.nexe"},
    "arm":    {"url": "ppapi_bad_ppp_initialize_arm.nexe"}
  }
}
